[UI]Fixed gap between Overview and Getting Started section

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -342,7 +342,6 @@
 
 .overview-section {
   padding-top: 10px;
-  margin-bottom: 4rem;
   color: #fff;
   align-items: center;
   background-color: #222;
